# rust-directory-navigation-playground

./: Cargo.toml  README.md
src/: main.rs
