[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Jaime Oliveira <Jaime.Oliveira@softgarden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
error-chain = "0.12.1"
walkdir = "2.2.9"
dirs = "2.0.2"
